5208.	[test]		Run valid rdata wire encodings through totext+fromtext
			and tofmttext+fromtext methods to check these methods.
			[GL #899]

5207.	[test]		Check delv and dig TTL values. [GL #965]

5206.	[bug]		Delv could print out bad TTLs. [GL #965]

5205.	[bug]		Enforce that a DS hash exists. [GL #899]

5204.	[test]		Check that dns_rdata_fromtext() produces a record that
			will be accepted by dns_rdata_fromwire(). [GL #852]

5203.	[bug]		Enforce whether key rdata exists or not in KEY,
			DNSKEY, CDNSKEY and RKEY. [GL #899]

5202.	[bug]		<dns/ecs.h> was missing ISC_LANG_ENDDECLS. [GL #976]

5201.	[bug]		Fix a possible deadlock in RPZ update code. [GL #973]

5200.	[placeholder]

5199.	[placeholder]

5198.	[bug]		If a fetch context was being shut down and, at the same
			time, we returned from qname minimization, an INSIST
			could be hit. [GL #966]

5197.	[bug]		dig could die in best effort mode on multiple SIG(0)
			records. Similarly on multiple OPT and multiple TSIG
			records. [GL #920]

5196.	[bug]		make install failed with --with-dlopen=no. [GL #955]

5195.	[bug]		"allow-update" and "allow-update-forwarding" were
			treated as configuration errors if used at the
			options or view level. [GL #913]

5194.	[bug]		Enforce non empty ZOMEMD hash. [GL #899]

5193.	[bug]		EID and NIMLOC failed to do multi-line output
			correctly. [GL #899]

5192.	[placeholder]

5191.	[placeholder]

5190.	[bug]		Ignore trust anchors using disabled algorithms.
			[GL #806]

5189.	[cleanup]	Remove revoked root DNSKEY from bind.keys. [GL #945]

5188.	[func]		The "dnssec-enable" option is deprecated and no
			longer has any effect; DNSSEC responses are
			always enabled. [GL #866]

5187.	[test]		Set time zone before running any tests in dnstap_test.
			[GL #940]

5186.	[cleanup]	More dnssec-keygen manual tidying. [GL !1678]

5185.	[placeholder]

5184.	[bug]		Missing unlocks in sdlz.c. [GL #936]

5183.	[bug]		Reinitialize ECS data before reusing client
			structures. [GL #881]
